fix: 수정된 내용(일급 컬렉션, 인가 검증) 적용